[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/system-map/system-map.gd" type="Script" id=1]
[ext_resource path="res://camera/camera-drag.gd" type="Script" id=2]
[ext_resource path="res://ui/theme/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/theme/fonts/PixelOperator.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="SystemMap" type="CanvasLayer" groups=["system_map"]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 20, 20 )
script = ExtResource( 2 )
zoom_min = 20.0
zoom_max = 360.0
zoom_factor = 20.0

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="SystemDetails" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 3 )

[node name="List" type="VBoxContainer" parent="SystemDetails"]
margin_left = 316.0
margin_right = 324.0
margin_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = -4

[node name="SystemName" type="Label" parent="SystemDetails/List"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 0
align = 1

[node name="SystemDetails" type="HBoxContainer" parent="SystemDetails/List"]
margin_top = 28.0
margin_right = 8.0
margin_bottom = 44.0
size_flags_horizontal = 4
custom_constants/separation = 8
alignment = 1

[node name="SystemObjects" type="Label" parent="SystemDetails/List/SystemDetails"]
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="SystemPosition" type="Label" parent="SystemDetails/List/SystemDetails"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
align = 1
